--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Infinite Scroll</title>
 <link rel="icon" type="image/png" href="https://www.google.com/s2/u/0/favicons?domain=twitch.tv">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-
+<h1>UNSPLASH API - INFINITE SCROLL</h1>
+<!-- loader -->
+<div class="loader" id="loader">
+    <img src="loader.svg" alt="Loading">
+</div>
+<!-- Image Container -->
+<div class="image-container" id="image-container"></div>
 
 <!-- script  -->
 <script src="script.js"></script>
